Fixed spacing on status dropdown menu

--- a/src/app/components/work-order-panel/work-order-panel.component.scss
+++ b/src/app/components/work-order-panel/work-order-panel.component.scss
@@ -283,6 +283,7 @@ $page-font-family: "Circular-Std", sans-serif;
   border-radius: 6px;
   box-shadow: 0 0 0 1px rgba(104, 113, 150, 0.1),
               0 4px 12px rgba(200, 207, 233, 0.6);
+  top: 43px;
   z-index: 9999;
   overflow: hidden;
 }
